# textual-vim

./: LICENSE  README.md  pyproject.toml
examples/: app.py
textual_vim/: __init__.py  widget.py
